--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 const diff = targetDate - now;
 
                 if (diff <= 0) {
-                    countdown.textContent = "Selamat ulang tahun~ 🎂";
+                    location.reload();
                     return;
                 }
 
