--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             // Ambil salah satu nama yang ultah
             const orangUltah = ultahHariIni[0];
             namaultahEl.textContent = `Happy Birthday ${orangUltah.name}!`;
-            ultahconditionEl.textContent = `ke ${umurultah}!`;
+            ultahconditionEl.textContent = `ke ${umurultah + 1}!`;
             const div2 = document.createElement("img");
             div2.className = "absolute inset-0 -z-10 w-full h-full object-cover object-center";
             div2.src = "./images/background1.png";
