Update title in index.html to reflect project name; modify ultah.json to remove duplicate entry for Hanif Albana Rozad.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./code/main.js"></script>
     <link rel="icon" href="./images/profil.png" type="image/png">
     <link rel="stylesheet" href="./style/2.css">
-    <title>Birthday Wish</title>
+    <title>Birthday TI-1A</title>
 </head>
 <body class="font-sans bg-gray-900 text-gray-100">
     <header class="flex flex-row justify-between items-center px-6 py-4 bg-gray-800 text-white shadow-md">
